--- a/client/src/index.html
+++ b/client/src/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/index.css" />
-    <title>React (Parcel + TypeScript)</title>
+    <link rel="icon" type="image/x-icon" href="../public/chat.png" />
+    <title>Chat App</title>
   </head>
   <body>
     <div id="root"></div>
